fix problem with alignment in hero

--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -7,7 +7,7 @@
   color: $color-title;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
 
   &__title {
@@ -74,8 +74,15 @@
     align-items: center;
     width: 45px;
     height: 45px;
+    margin-bottom: 53px;
     border-radius: 22.5px;
     background-color: $color-title;
+    @include tablet() {
+      margin-bottom: 45px;
+    }
+    @include desktop() {
+      margin-bottom: 13px;
+    }
     &--image {
       height: 11.7px;
       width: 20px;
